Add support for proxy_read_timeout and proxy_write_timeout

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     hostname: backend
     ports:
     - 8082:8082
+    cap_add:
+    - NET_ADMIN
   headersdebugger:
     image: brndnmtthws/nginx-echo-headers
     ports:
