--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,23 @@
 version: '2'
 services:
-  backend:
+  backend1:
     image: local/nginxlab
     entrypoint: nginx -g 'daemon off;' -c /etc/nginx/backend.conf
-    hostname: backend
+    hostname: backend1
     ports:
-    - 8082:8082
+    - 9094:8082
     cap_add:
     - NET_ADMIN
-  headersdebugger:
-    image: brndnmtthws/nginx-echo-headers
+  backend2:
+    image: local/nginxlab
+    entrypoint: nginx -g 'daemon off;' -c /etc/nginx/backend.conf
+    hostname: backend2
     ports:
-    - 8083:8080
+    - 9095:8082
+    cap_add:
+    - NET_ADMIN
+#  headersdebugger:
+#    image: brndnmtthws/nginx-echo-headers
+#    ports:
+#    - 8083:8080
   
