--- a/conf/backend.conf
+++ b/conf/backend.conf
@@ -20,8 +20,6 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    log_format csp_report '"$http_x_forwarded_for" [$time_local] "$request_body"';
-
 
     access_log  /var/log/nginx/access.log  main;
 
@@ -30,17 +28,6 @@ http {
 
     keepalive_timeout  65;
 
-    map $upstream_http_content_type $maintenance_page {
-      default /maintenance.html;
-      ~application/json /maintenance.json;
-    }
-
-    map $uri $webapp_staging_auth_basic_enabled {
-        default "on";
-        /api/users/check_signed_in "off";
-        /api/airports "off";
-    }
-
     #gzip  on;
     server {
         listen 8082;
@@ -48,6 +35,13 @@ http {
         server_tokens off;
         log_not_found on;
         error_log  /var/log/nginx/error.log notice;
+
+
+
+        location /bauth {
+          auth_basic 'restricted';
+          auth_basic_user_file includes/creds.passwd;
+        }
 
         location / {
           return 200 'backend';
