Moving code to receiver pattern, changes to proxy logic

--- a/conf/backend.conf
+++ b/conf/backend.conf
@@ -35,16 +35,14 @@ http {
         server_tokens off;
         log_not_found on;
         error_log  /var/log/nginx/error.log notice;
-
-
-
+        root /var/www;
+        
         location /bauth {
           auth_basic 'restricted';
           auth_basic_user_file includes/creds.passwd;
         }
 
         location / {
-          return 200 'backend';
         }
     }
 }
